# simple-ai-agent

./: .gitignore  .history  CHANGELOG_v7.2b.md  CHANGELOG_v7.3b.md  README.md  agent.py  agent_cli.py  build.bat  build_optimized.bat  check_models.py  delete_tools.py  env_example  env_example.txt  logging_config.py  mcp.json  mcp_servers_installation_guide.md  memory_manager.py  prompt.md  prompt.txt  pyproject.toml  requirements.txt  search_tools.py  start.py  ui.py  win-cli-config.json
core/: .gitignore  checkpointing.py  cli_utils.py  config.py  constants.py  destructive_guardrails.py  errors.py  fuzzy_completer.py  logging_config.py  message_utils.py  nodes.py  run_logger.py  safety_guard.py  safety_policy.py  session_store.py  session_utils.py  state.py  stream_processor.py  text_utils.py  tool_policy.py  tool_results.py  tool_sanitizer.py  tool_validator.py  ui_theme.py  utils.py  validation.py
pdf_mcp/: README.md  pdf_server.py  requirements.txt
tests/: test_cli_ux.py  test_critic_graph.py  test_pdf_mcp.py  test_runtime_refactor.py  test_stream_and_filesystem.py  test_tooling_refactor.py
tools/: delete_tools.py  filesystem.py  local_shell.py  media_tools.py  memory_manager.py  os_tools.py  patch_tool.py  process_tools.py  search_tools.py  system_tools.py  tool_registry.py  vision_tools.py
tools/filesystem_impl/: __init__.py  editing.py  manager.py  pathing.py
verifying_tests/: check_all_env.py
